<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_title" />

                <Spinner
                    android:id="@+id/spinner_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/layout_margin"
                    android:paddingBottom="@dimen/layout_margin"
                    android:spinnerMode="dialog"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/button_bored"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn"
                    android:padding="@dimen/layout_margin"
                    android:text="@string/Bored"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/image_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/share"
            android:src="@drawable/share"
            android:visibility="gone" />


        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/layout_margin"
                android:text="@string/Result"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
